[package]
name = "replenishing"
version = "0.1.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "replenishing"
path = "src/main.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"


[dependencies]
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"
